--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "author": "Pavel Kornilov",
   "private": true,
   "scripts": {
+    "build": "NODE_ENV=production webpack",
     "watch": "webpack serve"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.0.1",
+    "@fontsource/roboto": "4.1.0",
     "css-loader": "5.0.1",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "1.3.3",
-    "svelte": "3.31.0",
-    "svelte-easyroute": "3.0.2",
-    "svelte-loader": "2.13.6",
+    "file-loader": "6.2.0",
+    "mini-css-extract-plugin": "1.3.4",
+    "svelte": "3.31.2",
+    "svelte-easyroute": "3.0.7",
+    "svelte-loader": "3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "5.11.0",
-    "webpack-cli": "4.3.0"
+    "webpack": "5.17.0",
+    "webpack-cli": "4.4.0"
   },
   "devDependencies": {
-    "eslint": "7.16.0",
+    "eslint": "7.18.0",
     "eslint-plugin-svelte3": "3.0.0",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.2"
   }
 }
