--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "watch": "webpack serve"
   },
   "dependencies": {
-    "@fontsource/roboto": "4.1.0",
-    "css-loader": "5.0.1",
+    "@fontsource/roboto": "4.2.2",
+    "css-loader": "5.1.2",
     "file-loader": "6.2.0",
-    "mini-css-extract-plugin": "1.3.5",
-    "svelte": "3.32.1",
+    "idb-keyval": "^5.0.4",
+    "mini-css-extract-plugin": "1.3.9",
+    "pdfjs-dist": "^2.6.347",
+    "svelte": "3.35.0",
     "svelte-easyroute": "3.0.7",
     "svelte-loader": "3.0.0",
-    "url-loader": "^4.1.1",
-    "webpack": "5.20.1",
+    "url-loader": "4.1.1",
+    "webpack": "5.25.0",
     "webpack-cli": "4.5.0"
   },
   "devDependencies": {
-    "eslint": "7.19.0",
-    "eslint-plugin-svelte3": "3.0.0",
+    "eslint": "7.22.0",
+    "eslint-plugin-svelte3": "3.1.2",
     "webpack-dev-server": "3.11.2"
   }
 }
