--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/roboto": "4.2.2",
     "css-loader": "5.1.3",
+    "face-api.js": "^0.22.2",
     "file-loader": "6.2.0",
     "idb-keyval": "^5.0.4",
     "mini-css-extract-plugin": "1.3.9",
