--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "watch": "webpack serve"
   },
   "dependencies": {
-    "@fontsource/roboto": "4.2.2",
-    "css-loader": "5.1.3",
+    "@fontsource/roboto": "4.2.3",
+    "css-loader": "5.2.1",
     "face-api.js": "^0.22.2",
     "file-loader": "6.2.0",
-    "idb-keyval": "^5.0.4",
-    "mini-css-extract-plugin": "1.3.9",
-    "pdfjs-dist": "^2.6.347",
-    "svelte": "3.35.0",
-    "svelte-easyroute": "3.1.1",
-    "svelte-loader": "3.0.0",
+    "idb-keyval": "5.0.5",
+    "mini-css-extract-plugin": "1.4.1",
+    "pdfjs-dist": "2.7.570",
+    "svelte": "3.37.0",
+    "svelte-easyroute": "3.1.2",
+    "svelte-loader": "3.1.1",
     "url-loader": "4.1.1",
-    "webpack": "5.26.3",
-    "webpack-cli": "4.5.0"
+    "webpack": "5.32.0",
+    "webpack-cli": "4.6.0"
   },
   "devDependencies": {
-    "eslint": "7.22.0",
+    "eslint": "7.24.0",
     "eslint-plugin-svelte3": "3.1.2",
     "webpack-dev-server": "3.11.2"
   }
